[metadata]
name = utd
version = 0.0.6
author = Murzchnvok
author_email = murzchnvok@gmail.com
description = Just an Ugly To-Do app that I wanted to develop.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Murzchnvok/ugly-todo
project_urls =
    Bug Tracker = https://github.com/Murzchnvok/ugly-todo/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
keywords="to-do note kanban-board minimalist"

[options]
package_dir =
    = src
packages = find:
install_requires =
    rich>=10.16.1
python_requires = >=3.10

[options.packages.find]
where = src