[metadata]
name = utd
version = 0.1.0
author = Murzchnvok
author_email = murzchnvok@gmail.com
description = Just an Ugly To-Do app that I wanted to develop.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Murzchnvok/ugly-todo
project_urls =
    Bug Tracker = https://github.com/Murzchnvok/ugly-todo/issues
classifiers =
    Environment :: Console
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
keywords="to-do note kanban-board minimalist"

[options]
packages = find:
install_requires =
    rich>=10.16.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
    utd = ugly_todo.main:main
